# GPA-Defender

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  run.bat  run.sh
docs/: ASTI模块说明.md  README_BACKEND.md  游戏内容设计.md  防御模块说明.md
docs/superpowers/plans/: 2026-05-23-project-initialization.md
docs/superpowers/specs/: 2026-05-23-project-initialization-design.md
enc_temp_folder/d126df3e7933b1fde7b865d3ed333ae/: Renderer.cpp
include/gpa_defender/: Block.h  ChestManager.h  DefenseTower.h  Enemy.h  Enemy_fixed.h  GameEngine.h  GameUI.h  Indicator.h  LevelData.h  Obstacle.h  PlayerStats.h  Questionnaire.h  Vector2D.h  WaveManager.h
saves/: slot1.sav
scripts/: build_and_test.bat  build_and_test.sh  脚本.py
src/: Block.cpp  ChestManager.cpp  DefenseTower.cpp  Enemy.cpp  GameEngine.cpp  GameUI.cpp  LevelData.cpp  Obstacle.cpp  PlayerStats.cpp  Questionnaire.cpp  WaveManager.cpp  full_flow_scenario.cpp  full_flow_scenario.h  gui_main.cpp  main.cpp
src/frontend/: AssetPaths.cpp  AssetPaths.h  AudioManager.cpp  AudioManager.h  ChestManager.cpp  ChestManager.h  EffectManager.cpp  EffectManager.h  GameFrontend.cpp  GameFrontend.h  Renderer.cpp  Renderer.h  SettlementVideoAudioDecoder.cpp  SettlementVideoAudioDecoder.h  SettlementVideoDecoder.cpp  SettlementVideoDecoder.h  SettlementVideoPlayer.cpp  SettlementVideoPlayer.h  StageScore.h  TextureManager.cpp  TextureManager.h
tests/: BackendLoopSmokeTest.cpp  backend_smoke_main.cpp  chest_backend_smoke_main.cpp  full_flow_smoke_main.cpp  level_data_smoke_main.cpp
